--- a/style.css
+++ b/style.css
@@ -1,22 +1,23 @@
     /* ---------------------------------------------------- */  
     /* GLOBAL 
     /* ---------------------------------------------------- */  
-    html {  
-    font-size: 76%;}  
       
     body {  
-    font-family: arial, helvetica, sans-serif;  
+    font-family: arial, sans-serif;  
     line-height: 1.4em;  
-    font-size: 1.2em;  
-    padding: 5%;}  
-      
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 5%;
+    background: #E8E8E8;
+    color: #303030;
+    }  
+     
     /* ---------------------------------------------------- */  
     /* SLIDESHOW 
     /* ---------------------------------------------------- */  
     #slideshow {  
-    width: 960px;  
-    background-color: #eee;  
-    border: 1px solid #ddd;}  
+    width: 100%;  
+    }  
       
     #slideshow ul {  
     margin: 0;  
@@ -36,17 +37,22 @@
     /* ---------------------------------------------------- */  
     #slideshow .slides {  
     overflow: hidden;  
-    width: 960px;}  
+    width: 100%;
+    height: 400px;
+    border: 1px solid lightgrey;
+    background: #F8F8F8;
+    }  
       
     #slideshow .slides ul {  
-    /* total width of all slides - 
-    960px multiplied by 3 in this case */  
-    width: 2880px;}  
+    width: 400%;
+    float: left;
+    }  
       
     #slideshow .slides li {  
-    width: 920px;  
+    width: 21%;  
+    padding: 2%;
     float: left;  
-    padding: 20px;}  
+    }  
       
     #slideshow .slides h2 {  
     margin-top: 0;}  
@@ -55,13 +61,23 @@
     /* SLIDESHOW > NAVIGATION 
     /* ---------------------------------------------------- */  
     #slideshow .slides-nav {  
-    background-color: #ddd;  
-    border-top: 2px solid #ccc;}  
+    border: 1px solid lightgrey;
+    }  
       
     #slideshow .slides-nav li {  
-    float: left;}  
-      
+    float: left;
+    background: #F8F8F8;
+    width: 25%;
+    }  
+   
+    @media screen and (max-width: 480px) {
+	#slideshow .slides-nav li {
+	width: 100%;
+	}
+    }
+   
     #slideshow .slides-nav li a {  
+    padding: 10px 0;  
+    text-align: center;
     display: block;  
-    padding: 15px 20px;  
     outline: none;}  
