--- a/style.css
+++ b/style.css
@@ -3,15 +3,61 @@
     /* ---------------------------------------------------- */  
       
     body {  
-    font-family: arial, sans-serif;  
-    line-height: 1.4em;  
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 5%;
-    background: #E8E8E8;
-    color: #303030;
+	font-family: Arial, sans-serif; 
+	background: #E8E8E8;
+	color: #303030; 
+	margin: 0;
     }  
-     
+    #header,
+    body h2 {
+	font-family: Courier, sans-serif; 
+	letter-spacing: 1px;
+	color: gray;
+	text-transform: uppercase;
+    }
+    #header,
+    #main {
+	float: left;
+	width: 100%;
+    }
+    #header-wrapper,
+    #main-wrapper {
+	max-width: 1200px;
+	margin: 0 auto;
+	line-height: 1.4em;  
+    }
+    a {
+	text-decoration: none;
+	color: steelblue;
+	font-weight: bold;
+    }
+    a:hover {
+	color: #225D8E;
+	border-bottom: 2px solid #68093D;
+    }
+    /* ---------------------------------------------------- */  
+    /* HEADER
+    /* ---------------------------------------------------- */  
+    #header {
+	background: white;
+	box-shadow: 0 2px 2px 2px lightgrey;
+    }
+    #header-wrapper {
+	padding: 12px 0;
+    }
+    #header .logo {
+	float: left;
+    }
+    #header ul {
+	float: right;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+    }
+    #header ul li {
+	float: left;
+	padding-left: 12px;
+    }
     /* ---------------------------------------------------- */  
     /* SLIDESHOW 
     /* ---------------------------------------------------- */  
@@ -39,8 +85,6 @@
     overflow: hidden;  
     width: 100%;
     height: 400px;
-    border: 1px solid lightgrey;
-    background: #F8F8F8;
     }  
       
     #slideshow .slides ul {  
@@ -55,29 +99,32 @@
     }  
       
     #slideshow .slides h2 {  
-    margin-top: 0;}  
-      
-    /* ---------------------------------------------------- */  
-    /* SLIDESHOW > NAVIGATION 
-    /* ---------------------------------------------------- */  
-    #slideshow .slides-nav {  
-    border: 1px solid lightgrey;
+    margin-top: 0;
     }  
-      
-    #slideshow .slides-nav li {  
-    float: left;
-    background: #F8F8F8;
-    width: 25%;
-    }  
-   
-    @media screen and (max-width: 480px) {
-	#slideshow .slides-nav li {
+
+    /* ---------------------------------------------------- */  
+    /* TIC-TAC-TOE GAMEBOARD
+    /* ---------------------------------------------------- */  
+
+    #game-board {
 	width: 100%;
-	}
+	float: left;
+    } 
+    .pos {
+	float: left;
+	width: 33%;
+	height: 50px;
+	background: white;
     }
-   
-    #slideshow .slides-nav li a {  
-    padding: 10px 0;  
-    text-align: center;
-    display: block;  
-    outline: none;}  
+    .pos:hover {
+	background: lightgrey;
+	cursor: pointer;
+    }
+    .row-0,
+    .row-1 {
+	border-bottom: 1px solid grey;
+    }
+    .col-0,
+    .col-1 {
+	border-right: 1px solid grey;
+    }
