--- a/style.css
+++ b/style.css
@@ -1,128 +1,128 @@
-    /* ---------------------------------------------------- */  
-    /* GLOBAL 
-    /* ---------------------------------------------------- */  
-      
-    body {  
+/* ---------------------------------------------------- */  
+/* GLOBAL 
+/* ---------------------------------------------------- */  
+
+body {  
 	font-family: Arial, sans-serif; 
 	background: #E8E8E8;
 	color: #303030; 
 	margin: 0;
-    }  
-    #header,
-    body h2 {
+}  
+#header,
+body h2 {
 	font-family: Courier, sans-serif; 
 	letter-spacing: 1px;
 	color: gray;
 	text-transform: uppercase;
-    }
-    #header,
-    #main {
+}
+#header,
+#main {
 	float: left;
 	width: 100%;
-    }
-    #header-wrapper,
-    #main-wrapper {
+}
+#header-wrapper,
+#main-wrapper {
 	max-width: 1200px;
 	margin: 0 auto;
 	line-height: 1.4em;  
-    }
-    a {
+}
+a {
 	text-decoration: none;
 	color: steelblue;
 	font-weight: bold;
-    }
-    a:hover {
+}
+a:hover {
 	color: #225D8E;
 	border-bottom: 2px solid #68093D;
-    }
-    /* ---------------------------------------------------- */  
-    /* HEADER
-    /* ---------------------------------------------------- */  
-    #header {
+}
+/* ---------------------------------------------------- */  
+/* HEADER
+/* ---------------------------------------------------- */  
+#header {
 	background: white;
 	box-shadow: 0 2px 2px 2px lightgrey;
-    }
-    #header-wrapper {
+}
+#header-wrapper {
 	padding: 12px 0;
-    }
-    #header .logo {
+}
+#header .logo {
 	float: left;
-    }
-    #header ul {
+}
+#header ul {
 	float: right;
 	margin: 0;
 	padding: 0;
 	list-style: none;
-    }
-    #header ul li {
+}
+#header ul li {
 	float: left;
 	padding-left: 12px;
-    }
-    /* ---------------------------------------------------- */  
-    /* SLIDESHOW 
-    /* ---------------------------------------------------- */  
-    #slideshow {  
-    width: 100%;  
-    }  
-      
-    #slideshow ul {  
-    margin: 0;  
-    padding: 0;  
-    list-style-type: none;  
-    height: 1%; /* IE fix */}  
-      
-    #slideshow ul:after {  
-    content: ".";  
-    clear: both;  
-    display: block;  
-    height: 0;  
-    visibility: hidden;}              
-      
-    /* ---------------------------------------------------- */  
-    /* SLIDESHOW > SLIDES 
-    /* ---------------------------------------------------- */  
-    #slideshow .slides {  
-    overflow: hidden;  
-    width: 100%;
-    height: 400px;
-    }  
-      
-    #slideshow .slides ul {  
-    width: 400%;
-    float: left;
-    }  
-      
-    #slideshow .slides li {  
-    width: 21%;  
-    padding: 2%;
-    float: left;  
-    }  
-      
-    #slideshow .slides h2 {  
-    margin-top: 0;
-    }  
+}
+/* ---------------------------------------------------- */  
+/* SLIDESHOW 
+/* ---------------------------------------------------- */  
+#slideshow {  
+	width: 100%;  
+}  
 
-    /* ---------------------------------------------------- */  
-    /* TIC-TAC-TOE GAMEBOARD
-    /* ---------------------------------------------------- */  
-    #game-title {
+#slideshow ul {  
+	margin: 0;  
+	padding: 0;  
+	list-style-type: none;  
+height: 1%; /* IE fix */}  
+
+#slideshow ul:after {  
+	content: ".";  
+	clear: both;  
+	display: block;  
+	height: 0;  
+visibility: hidden;}              
+
+/* ---------------------------------------------------- */  
+/* SLIDESHOW > SLIDES 
+/* ---------------------------------------------------- */  
+#slideshow .slides {  
+	overflow: hidden;  
+	width: 100%;
+	height: 400px;
+}  
+
+#slideshow .slides ul {  
+	width: 400%;
+	float: left;
+}  
+
+#slideshow .slides li {  
+	width: 21%;  
+	padding: 2%;
+	float: left;  
+}  
+
+#slideshow .slides h2 {  
+	margin-top: 0;
+}  
+
+/* ---------------------------------------------------- */  
+/* TIC-TAC-TOE GAMEBOARD
+/* ---------------------------------------------------- */  
+#game-title {
 	height: 100px;
-    }
-    #game-robot {
+}
+#game-robot {
 	width: 40%;
 	float: left;
-    }
-    #game-board {
+}
+#game-board {
 	width: 60%;
 	float: right;
-    } 
-    @media screen and (max-width: 768px) {
-      #game-robot,
-      #game-board {
-	width: 100%;
-      }
-    }
-    .pos {
+} 
+@media screen and (max-width: 768px) {
+	#game-robot,
+	#game-board {
+		width: 100%;
+	}
+}
+.pos {
 	float: left;
 	width: 33%;
 	height: 40px;
@@ -131,22 +131,27 @@
 	font-size: 50px;
 	text-align: center;
 	color: gray;
-    }
-    .pos:hover {
-	background: #f5f5f5;
+}
+.pos:hover {
+	background: #C3D4E0;
 	cursor: pointer;
-    }
-    .pos.player {
+}
+.pos.player {
 	color: #225D8E;
-    }
-    .pos.ai {
+}
+.pos.ai {
 	color: #68093D;
-    }
-    .row-0,
-    .row-1 {
+}
+.pos.ai:hover,
+.pos.player:hover {
+	background: white;
+	cursor: default;
+}
+.row-0,
+.row-1 {
 	border-bottom: 1px solid #c2c2c2;
-    }
-    .col-0,
-    .col-1 {
+}
+.col-0,
+.col-1 {
 	border-right: 1px solid #c2c2c2;
-    }
+}
