--- a/style.css
+++ b/style.css
@@ -125,6 +125,8 @@ button {
 	padding: 10px ;
 	float: left;
 	cursor: pointer;
+	background: steelblue;
+	color: white;
 }
 #game-robot {
 	width: 40%;
