Fix headers on tic-tac-toe

--- a/style.css
+++ b/style.css
@@ -105,6 +105,9 @@ a:hover {
 /* ---------------------------------------------------- */  
 #game-title {
 	height: 100px;
+}
+#game-title,
+#game-title button {
 	text-transform: uppercase;
 }
 button {
